--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "UHBC Backend",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -16,9 +18,6 @@
     "url": "https://github.com/ZakaryaMeddahi/UHBC-Backend/issues"
   },
   "homepage": "https://github.com/ZakaryaMeddahi/UHBC-Backend#readme",
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -30,5 +29,8 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
