--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
+    "generate-password": "^1.7.1",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "nodemailer": "^6.9.12"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
