fix(.env): update MONGO_URI to point to the correct MongoDB URI for the uhbc-backend database feat(app.js): add cors middleware to allow cross-origin requests feat(app.js): remove authentication and admin middleware from /api/v1/admins route fix(controllers/admins.controller.js): fix typo in error variable declaration feat(controllers/admins.controller.js): add console.log to log generated password fix(controllers/students.controller.js): fix typo in error variable declaration feat(controllers/students.controller.js): add console.log to log generated password feat(controllers/students.controller.js): add support for searching students by name, email, and registration number fix(controllers/students.controller.js): fix indentation and formatting feat(controllers/students.controller.js): add updateStudent and deleteStudent functions fix(models/Resource.js): remove commented out code and fix indentation feat(task.todo): add task to fix email sending issue

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/UHBC-DB
+MONGO_URI=mongodb://127.0.0.1:27017/uhbc-backend
 JWT_SECRET=secret
 JWT_LIFETIME=7d
 USER=zakaryameddahi@gmail.com
